--- a/src/Smartstore.Web/Views/Customer/Info.cshtml
+++ b/src/Smartstore.Web/Views/Customer/Info.cshtml
@@ -43,7 +43,7 @@
         <div sm-if="Model.TitleEnabled" class="form-group row">
             <label asp-for="Title" class="col-lg-3 col-form-label"></label>
             <div class="col-lg-9">
-                <input asp-for="Title" autocomplete="organization-title" />
+                <input asp-for="Title" autocomplete="honorific-prefix" />
                 <span asp-validation-for="Title"></span>
             </div>
         </div>
