--- a/src/Smartstore.Web/Views/Customer/AddressEdit.cshtml
+++ b/src/Smartstore.Web/Views/Customer/AddressEdit.cshtml
@@ -15,8 +15,11 @@
 
     <div class="form-group row">
         <div class="col">
-            <button type="submit" class="btn btn-primary btn-lg save-address-button">
-                <i class="fa fa-check"></i>
+            <button id="save-address-button" 
+                    type="submit" 
+                    class="btn btn-primary btn-lg save-address-button" 
+                    aria-labelledby="myaccount-header save-address-button">
+                <i class="fa fa-check" aria-hidden="true"></i>
                 <span>@T("Common.Save")</span>
             </button>
         </div>
