--- a/src/Smartstore.Web/Views/Customer/Addresses.cshtml
+++ b/src/Smartstore.Web/Views/Customer/Addresses.cshtml
@@ -8,7 +8,7 @@
     ViewBag.PageTitle = T("Account.CustomerAddresses").Value;
 }
 
-<div sm-if="Model.Count == 0" class="alert alert-warning">
+<div sm-if="Model.Count == 0" class="alert alert-warning" role="status" aria-live="polite">
     @T("Account.CustomerAddresses.NoAddresses")
 </div>
 
