--- a/src/Smartstore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -35,7 +35,7 @@
                         }
                     </div>
                     <div class="art-genericname">
-                        <a href="@item.Url" title="@linkTitle">
+                        <a class="art-name-link" href="@item.Url" title="@linkTitle">
                             <span sm-language-attributes-for="item.Name">@item.Name</span>
                         </a>
                     </div>
