--- a/src/Smartstore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -25,7 +25,7 @@
                 </div>
             }
             <div class="art-genericname">
-                <a href="@url" title="@item.Name">
+                <a class="art-name-link" href="@url" title="@item.Name">
                     <span sm-language-attributes-for="item.Name">@item.Name</span>
                 </a>
             </div>
