--- a/src/Smartstore.Web/Views/Shared/Components/HomeBrands/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/HomeBrands/Default.cshtml
@@ -18,7 +18,7 @@
                     </a>
                 </div>
                 <div class="art-genericname">
-                    <a href="@url" title="@item.Name">
+                    <a class="art-name-link" href="@url" title="@item.Name">
                         <span sm-language-attributes-for="item.Name">@item.Name</span>
                     </a>
                 </div>
