--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -74,7 +74,7 @@
     }
 
     <h3 class="art-name" sm-language-attributes-for="Model.Name">
-        <a href="@Model.DetailUrl" title="@Model.Name.ToString()">
+        <a class="art-name-link" href="@Model.DetailUrl" title="@Model.Name.ToString()">
             <span>@Html.Raw(Model.Name)</span>
         </a>
     </h3>
